[gd_scene load_steps=12 format=4 uid="uid://cuigqv7mhal0l"]

[ext_resource type="Texture2D" uid="uid://b3hyunlruj2dk" path="res://Assets/Terrain/Tileset/Water Background color.png" id="1_dilhk"]
[ext_resource type="Script" uid="uid://dtm3q7wv3due6" path="res://Levels/level_1.gd" id="1_rfktq"]
[ext_resource type="PackedScene" uid="uid://dxdanifprprbx" path="res://Prefabs/level_map.tscn" id="2_3mhv4"]
[ext_resource type="PackedScene" uid="uid://bwg0407vsjaj0" path="res://Characters/player.tscn" id="3_3mhv4"]
[ext_resource type="PackedScene" uid="uid://00vk518p2a6a" path="res://Prefabs/doodads_tilemap.tscn" id="3_rf6l5"]
[ext_resource type="PackedScene" uid="uid://dn2if4o3qsu8b" path="res://Enemy/swordsman.tscn" id="5_syshm"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_syshm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfktq"]
bg_color = Color(0.2627451, 0.23921569, 0.003921569, 0.5137255)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.44705883, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0urlm"]
bg_color = Color(0.9647059, 0.94509804, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77x7w"]
bg_color = Color(0.29803923, 0.11372549, 0.11372549, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.56085813, 0.12159795, 0.12142276, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoyoh"]
bg_color = Color(0.91480815, 0.04278653, 2.8878452e-07, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Level1" type="Node2D" groups=["MainScene"]]
script = ExtResource("1_rfktq")

[node name="WaterBackgroundColor" type="Sprite2D" parent="."]
position = Vector2(479.50006, 318)
scale = Vector2(15.890625, 10.687499)
texture = ExtResource("1_dilhk")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_syshm")

[node name="TileMapLayer" parent="NavigationRegion2D" instance=ExtResource("2_3mhv4")]
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAADAAIAAQACAAEAAAAFAAIAAQAAAAAAAAAGAAIAAQABAAEAAAAHAAIAAQABAAEAAAAIAAEAAQABAAEAAAAJAAEAAQABAAEAAAAJAAAAAQABAAAAAAAJAAQAAQACAAIAAAAJAAYAAQABAAAAAAAIAAUAAQACAAEAAAAHAAUAAQABAAEAAAAGAAUAAQABAAEAAAAGAAYAAQABAAIAAAAHAAcAAQAAAAEAAAAIAAcAAQABAAEAAAAIAAAAAQABAAAAAAABAAAAAQAAAAAAAAACAAAAAQABAAAAAAADAAAAAQABAAAAAAAEAAAAAQABAAMAAAAFAAAAAQABAAMAAAAGAAAAAQABAAAAAAAHAAAAAQABAAAAAAAIAAkAAQABAAIAAAAFAAYAAQABAAIAAAAEAAUAAQABAAEAAAAEAAQAAQABAAEAAAADAAMAAQABAAEAAAACAAIAAQABAAEAAAABAAEAAQABAAEAAAAJAAkAAQABAAIAAAAJAAgAAQABAAEAAAAJAAcAAQABAAEAAAAJAAMAAQABAAEAAAAJAAIAAQABAAEAAAAIAAgAAQABAAEAAAAIAAYAAQABAAEAAAAIAAQAAQABAAEAAAAIAAMAAQABAAEAAAAIAAIAAQABAAEAAAAHAAkAAQABAAIAAAAHAAYAAQABAAEAAAAHAAQAAQABAAEAAAAHAAMAAQABAAEAAAAGAAkAAQABAAIAAAAGAAgAAQABAAAAAAAGAAQAAQABAAEAAAAGAAMAAQABAAEAAAAFAAkAAQABAAIAAAAFAAgAAQABAAAAAAAFAAUAAQABAAEAAAAFAAQAAQABAAEAAAAFAAMAAQABAAEAAAAEAAkAAQABAAIAAAAEAAgAAQABAAEAAAAEAAcAAQACAAEAAAAEAAYAAQABAAEAAAAEAAMAAQABAAAAAAADAAkAAQAAAAIAAAADAAgAAQAAAAEAAAADAAcAAQABAAEAAAADAAYAAQABAAEAAAADAAUAAQABAAEAAAADAAEAAQACAAEAAAACAAcAAQABAAIAAAACAAYAAQABAAEAAAACAAUAAQABAAEAAAACAAQAAQABAAEAAAACAAEAAQABAAEAAAABAAkAAQACAAIAAAABAAgAAQACAAEAAAABAAcAAQABAAEAAAABAAYAAQABAAEAAAABAAUAAQABAAEAAAABAAQAAQABAAEAAAABAAMAAQABAAEAAAABAAIAAQABAAEAAAAAAAkAAQAAAAIAAAAAAAgAAQAAAAEAAAAAAAcAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAEAAQAAAAAAAAAOAAkAAQADAAIAAAAOAAgAAQACAAEAAAAOAAcAAQACAAEAAAAOAAYAAQACAAEAAAAOAAUAAQACAAEAAAAOAAQAAQACAAEAAAAOAAMAAQACAAEAAAAOAAIAAQACAAAAAAAOAAAAAQACAAMAAAANAAgAAQABAAIAAAANAAcAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQACAAEAAAANAAAAAQABAAAAAAAMAAkAAQACAAIAAAAMAAgAAQABAAEAAAAMAAcAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAEAAAAMAAAAAQABAAAAAAALAAgAAQABAAEAAAALAAcAAQABAAEAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQAAAAEAAAALAAMAAQABAAEAAAALAAIAAQABAAEAAAALAAEAAQABAAEAAAALAAAAAQABAAAAAAAKAAkAAQABAAIAAAAKAAgAAQABAAEAAAAKAAcAAQABAAEAAAAKAAYAAQABAAEAAAAKAAUAAQAAAAAAAAAKAAMAAQABAAIAAAAKAAIAAQABAAEAAAAKAAEAAQABAAEAAAAKAAAAAQABAAAAAAADAAQAAQABAAEAAAACAAMAAQABAAEAAAAHAAgAAQABAAEAAAALAAkAAQABAAIAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAAMAAYAAQABAAEAAAAHAAEAAQABAAEAAAAGAAEAAQAAAAEAAAA=")

[node name="DoodadsTilemap" parent="NavigationRegion2D" instance=ExtResource("3_rf6l5")]
tile_map_data = PackedByteArray("AAAVABcAAAAAAAAAAQAwAA0AAAAAAAAAAQA1AB0AAAAAAAAAAQAGABAAAAAAAAAAAQA=")

[node name="Player" parent="." instance=ExtResource("3_3mhv4")]
position = Vector2(486, 326)

[node name="ArrowHolder" type="Node2D" parent="."]

[node name="EnemyHolder" type="Node2D" parent="."]

[node name="Swordsman" parent="EnemyHolder" instance=ExtResource("5_syshm")]
position = Vector2(133, 100)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 963.0
offset_bottom = 649.0

[node name="ExpBar" type="ProgressBar" parent="Control"]
modulate = Color(1, 1, 1, 0.70980394)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -334.5
offset_right = 334.5
offset_bottom = 41.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_rfktq")
theme_override_styles/fill = SubResource("StyleBoxFlat_0urlm")
value = 14.53
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = -115.0
offset_right = 342.0
offset_bottom = -77.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_77x7w")
theme_override_styles/fill = SubResource("StyleBoxFlat_xoyoh")
max_value = 10.0
value = 5.11
show_percentage = false

[node name="TextureRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 1.0
offset_right = 142.0
offset_bottom = 41.0
color = Color(0.32172796, 0.32172796, 0.32172796, 1)

[node name="LevelLabel" type="Label" parent="Control"]
layout_mode = 1
offset_left = 46.0
offset_top = 11.0
offset_right = 165.0
offset_bottom = 52.0
text = "LEVEL:40"
